GCS connector delegation token support (#138) [changes after internal review]
-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=240841043